add github instruction to README.md

--- a/index.html
+++ b/index.html
@@ -110,7 +110,9 @@ function create() {
     homeKey = game.input.keyboard.addKey(Phaser.Keyboard.HOME);
     endKey = game.input.keyboard.addKey(Phaser.Keyboard.END);    
 
-    // !!!!!!!!always loads last!!!!!!!!
+    ////////////////////////////////////////////
+    // !!!!!!!!star always loads last!!!!!!!! //
+    ////////////////////////////////////////////
     star = game.add.sprite(0,0,'star');
     game.physics.startSystem(Phaser.Physics.P2JS);
 
